--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
+    "framer-motion": "^7.6.7",
     "lucide-react": "^0.290.0",
     "next": "^13.4.9",
     "postcss": "8.4.31",
